--- a/ansible/roles/ftp/tasks/test.yml
+++ b/ansible/roles/ftp/tasks/test.yml
@@ -1,5 +1,7 @@
 - hosts: localhost
   gather_facts: false
+  vars:
+    # ansible_become_password: ""
   tasks:
     - name: Ensure FTP database exists
       community.mysql.mysql_db:
@@ -13,7 +15,7 @@
         name: "ftpuser"
         host: localhost
         password: "ftppass123!ChangeMe"
-        priv: "ftpdb.*:SELECT"
+        priv: "ftpdb.*:SELECT,INSERT,UPDATE,DELETE"
         state: present
         login_user: root
         login_password: "1"
@@ -37,3 +39,4 @@
         password: "ftp_password"
         state: present
         webroot: /var/www-data/example.local
+      become: true
